--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dopefolio</title>
+    <title>Tanisha Cooper Portfolio</title>
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              src="./assets/png/TCooper.png"
+              alt="Tanisha Cooper Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Tanisha Cooper</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,12 +84,10 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Hey, My name is Tanisha Cooper</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            Self-driven, quick starter, passionate data analyst and Registered Nurse (MSN) with a curious mind who loves solving a very complex, challenging real-world problems.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -98,7 +96,7 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://www.linkedin.com/in/tanisha-cooper-5b3743197/" target="_blank">
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -107,7 +105,7 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://github.com/TanishaCooper?tab=repositories" class="home-hero__social-icon-link">
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -116,30 +114,12 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
-            <img
-              src="./assets/png/twitter-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-        <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
-            <img
-              src="./assets/png/yt-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-        <div class="home-hero__social">
           <a
-            href="#"
+            href="https://www.instagram.com/tstrick29/"
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
-              src="./assets/png/insta-ico.png"
+              src="./assets/png/insta.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -155,8 +135,11 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Hi, I'm Tanisha Cooper. I'm currently working as a Healthcare Data Analyst using tools such as:
+            <b>Advanced Excel, SQL (Microsoft Access, PostgreSQL, and SQL).</b> Certification in Georgia Tech Data Science and Analytics.
+            I'm also an advanced degree Registered Nurse with a speciality in Nursing Informatics. I have experience in machine learning using tools, databases,
+            programming, library, and web data visualization such as: <b>Tableau, Hadoop, noSQL databases (MongoDB), SQL (PostgreSQL),
+            Python, Numpy, Pandas, Matplotlib, R, HTML, CSS, JavaScript, and much more</b>.
           </span>
         </h2>
         <div class="about__content">
@@ -165,23 +148,23 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
+                <strong>Tanisha Cooper</strong>
+                and I'm a <strong> Registered Nurse and Data Analyst </strong> located in
+                Locust Grove, Georgia near greater Atlanta area. I've done
                 <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
+                projects for agencies, consulted for front and backend electronic health record and other technology systems, and collaborated
                 with talented people to create
                 <strong>digital products </strong>
-                for both business and consumer use.
+                for business use.
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
+                Over the years, I've used
                 hundreds of web and mobile apps in different industries and
                 verticals. Feel free to
                 <strong>contact</strong> me here.
               </p>
             </div>
-            <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
+            <a href="mailto:strickland.tanisha@yahoo.com" class="btn btn--med btn--theme dynamicBgClr"
               >Contact</a
             >
           </div>
@@ -191,15 +174,15 @@
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Microsoft Excel</div>
               <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">MongoDB</div>
+              <div class="skills__skill">Tableau</div>
+              <div class="skills__skill">R</div>
+              <div class="skills__skill">SQL (PostgreSQL)</div>
+              <div class="skills__skill">Hadoop</div>
+              <div class="skills__skill">Pandas</div>
             </div>
           </div>
         </div>
