--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tanisha Cooper Portfolio</title>
+    <title>Tanisha Cooper: Portfolio</title>
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Hey, My name is Tanisha Cooper</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Self-driven, quick starter, passionate data analyst and Registered Nurse (MSN) with a curious mind who loves solving a very complex, challenging real-world problems.
+            Self-driven, quick starter, passionate data analyst and Registered Nurse (MSN) with a curious mind who loves solving a very complex, challenging real-world problems using machine learning.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -96,7 +96,7 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="https://www.linkedin.com/in/tanisha-cooper-5b3743197/" target="_blank">
+          <a href="https://www.linkedin.com/in/tanisha-cooper-5b3743197/" class="home-hero__social-icon-link" target="_blank">
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -105,7 +105,7 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="https://github.com/TanishaCooper?tab=repositories" class="home-hero__social-icon-link">
+          <a href="https://github.com/TanishaCooper?tab=repositories" class="home-hero__social-icon-link" target="_blank">
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -116,7 +116,7 @@
         <div class="home-hero__social">
           <a
             href="https://www.instagram.com/tstrick29/"
-            class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
+            class="home-hero__social-icon-link home-hero__social-icon-link--bd-none" target="_blank"
           >
             <img
               src="./assets/png/insta.png"
@@ -135,7 +135,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Hi, I'm Tanisha Cooper. I'm currently working as a Healthcare Data Analyst using tools such as:
+            Hi, I'm Tanisha Cooper. I'm currently working as a Healthcare Business Data Analyst using tools such as:
             <b>Advanced Excel, SQL (Microsoft Access, PostgreSQL, and SQL).</b> Certification in Georgia Tech Data Science and Analytics.
             I'm also an advanced degree Registered Nurse with a speciality in Nursing Informatics. I have experience in machine learning using tools, databases,
             programming, library, and web data visualization such as: <b>Tableau, Hadoop, noSQL databases (MongoDB), SQL (PostgreSQL),
@@ -152,7 +152,7 @@
                 and I'm a <strong> Registered Nurse and Data Analyst </strong> located in
                 Locust Grove, Georgia near greater Atlanta area. I've done
                 <strong> remote </strong>
-                projects for agencies, consulted for front and backend electronic health record and other technology systems, and collaborated
+                projects for agencies, consulted for front and backend electronic health record, designed reports in <strong>Salesforce</strong>, and other technology systems, and collaborated
                 with talented people to create
                 <strong>digital products </strong>
                 for business use.
@@ -164,7 +164,7 @@
                 <strong>contact</strong> me here.
               </p>
             </div>
-            <a href="mailto:strickland.tanisha@yahoo.com" class="btn btn--med btn--theme dynamicBgClr"
+            <a href="mailto:strickland.tanisha@yahoo.com" class="btn btn--med btn--theme dynamicBgClr" target="_blank"
               >Contact</a
             >
           </div>
@@ -175,14 +175,20 @@
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">Python</div>
+              <div class="skills__skill">API</div>
+              <div class="skills__skill">JSON</div>
               <div class="skills__skill">Microsoft Excel</div>
+              <div class="skills__skill">Microsoft Excel: VBA</div>
               <div class="skills__skill">GIT</div>
               <div class="skills__skill">MongoDB</div>
               <div class="skills__skill">Tableau</div>
               <div class="skills__skill">R</div>
               <div class="skills__skill">SQL (PostgreSQL)</div>
+              <div class="skills__skill">SQLAlchemy</div>
               <div class="skills__skill">Hadoop</div>
               <div class="skills__skill">Pandas</div>
+              <div class="skills__skill">Jupyter Notebook</div>
+              <div class="skills__skill">Salesforce</div>
             </div>
           </div>
         </div>
@@ -193,8 +199,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            The projects collect, process, analyze, and present data visuals - from supporting and analyzing data in education, finance, government, climate, human resource databases, and more.
           </span>
         </h2>
 
@@ -202,18 +207,16 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
-                alt="Software Screenshot"
+                src="./assets/png/vba_project_img.png"
+                alt="The VBA of Wall Street"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">Project 1: The VBA of Wall Street</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Utilize VBA scripting to analyze real stock market data for 3 consecutive years (2018 - 2020). 
               </p>
               <a
                 href="./project-1.html"
