project html updated

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Hey, My name is Tanisha Cooper</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Self-driven, quick starter, passionate data analyst and Registered Nurse (MSN) with a curious mind who loves solving a very complex, challenging real-world problems using machine learning.
+            Self-driven, quick starter, passionate data analyst and Registered Nurse (MSN) with a curious mind who loves solving a very complex, challenging real-world problems using machine learning tools to create data visualizations.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -286,7 +286,7 @@
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action="#" class="contact__form">
+          <form action="https://formspree.io/f/mjvllzjz" class="contact__form" method="post">
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
@@ -296,6 +296,17 @@
                 class="contact__form-input"
                 name="name"
                 id="name"
+              />
+            </div>
+            <div class="contact__form-field">
+              <label class="contact__form-label" for="telephone">Telephone Number (Optional)</label>
+              <input
+                optional
+                placeholder="(555) 555-5555"
+                type="telephone"
+                class="contact__form-input"
+                name="telephone"
+                id="telephone"
               />
             </div>
             <div class="contact__form-field">
