project htmls added for additional pages

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </p>
         </div>
         <div class="home-hero__cta">
-          <a href="./#projects" class="btn btn--bg">Projects</a>
+          <a href="./index.html#projects" class="btn btn--bg">Projects</a>
         </div>
       </div>
       <div class="home-hero__socials">
@@ -180,6 +180,7 @@
               <div class="skills__skill">Microsoft Excel</div>
               <div class="skills__skill">Microsoft Excel: VBA</div>
               <div class="skills__skill">GIT</div>
+              <div class="skills__skill">Github</div>
               <div class="skills__skill">MongoDB</div>
               <div class="skills__skill">Tableau</div>
               <div class="skills__skill">R</div>
@@ -236,11 +237,9 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">Project 2: Web Design: Weather Data Visualization</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Web Design: Weather Data Visualization is a website design that utilized HTML, CSS, Bootstrap, Python, and Pandas to showcase weather data from an API output csv. The Web Visualization Dashboard consists of individual pages for each plot and a way to navigate between them. The pages contain the landing page, viusalizations, comparison of all plots, and data table used to build plots.
               </p>
               <a
                 href="./project-2.html"
@@ -261,6 +260,20 @@
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 3</h3>
+              <p class="projects__row-content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                facilis tempora, explicabo quae quod deserunt eius sapiente
+                praesentium.
+              </p>
+              <a
+                href="./project-3.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Project 4</h3>
               <p class="projects__row-content-desc">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
                 facilis tempora, explicabo quae quod deserunt eius sapiente
