--- a/index.html
+++ b/index.html
@@ -258,12 +258,11 @@
                 loading="lazy"
               />
             </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Project 3: SQLAlchemy: Climate Analysis</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Planning a vacation to Hawaii. I used SQLAlchemy to extract the temperature data for our vacation dates to see when is the best time to visit. Also, if June and December have a meaniful difference between temperature. Used a paired t-test to determin whether the difference in the mean is statistically significant.
+                I used tools such as Python, SQLAlchemy, Pandas, Matplotlib, JSON and Flask API. In addition to the analysis deliverable, I designed a climate app using Flask.
               </p>
               <a
                 href="./project-3.html"
@@ -272,6 +271,16 @@
                 >Case Study</a
               >
             </div>
+          </div>
+          <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 4</h3>
               <p class="projects__row-content-desc">
@@ -280,7 +289,103 @@
                 praesentium.
               </p>
               <a
-                href="./project-3.html"
+                href="./project-4.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Project 5</h3>
+              <p class="projects__row-content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                facilis tempora, explicabo quae quod deserunt eius sapiente
+                praesentium.
+              </p>
+              <a
+                href="./project-5.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Project 6</h3>
+              <p class="projects__row-content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                facilis tempora, explicabo quae quod deserunt eius sapiente
+                praesentium.
+              </p>
+              <a
+                href="./project-6.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Project 7</h3>
+              <p class="projects__row-content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                facilis tempora, explicabo quae quod deserunt eius sapiente
+                praesentium.
+              </p>
+              <a
+                href="./project-7.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Project 8</h3>
+              <p class="projects__row-content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                facilis tempora, explicabo quae quod deserunt eius sapiente
+                praesentium.
+              </p>
+              <a
+                href="./project-8.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
