--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/png/vba_project_img.png"
+                src="./assets/png/vba-image.png"
                 alt="The VBA of Wall Street"
                 class="projects__row-img"
                 loading="lazy"
@@ -230,7 +230,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/comparison-lg.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -239,7 +239,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 2: Web Design: Weather Data Visualization</h3>
               <p class="projects__row-content-desc">
-                Web Design: Weather Data Visualization is a website design that utilized HTML, CSS, Bootstrap, Python, and Pandas to showcase weather data from an API output csv. The Web Visualization Dashboard consists of individual pages for each plot and a way to navigate between them. The pages contain the landing page, viusalizations, comparison of all plots, and data table used to build plots.
+                Web Design: Weather Data Visualization is a website design that utilized HTML, CSS, Bootstrap, Python, and Pandas to showcase weather data from an API output csv. 
               </p>
               <a
                 href="./project-2.html"
@@ -252,7 +252,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/sqlalchemy_image.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -261,8 +261,7 @@
               <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 3: SQLAlchemy: Climate Analysis</h3>
               <p class="projects__row-content-desc">
-                Planning a vacation to Hawaii. I used SQLAlchemy to extract the temperature data for our vacation dates to see when is the best time to visit. Also, if June and December have a meaniful difference between temperature. Used a paired t-test to determin whether the difference in the mean is statistically significant.
-                I used tools such as Python, SQLAlchemy, Pandas, Matplotlib, JSON and Flask API. In addition to the analysis deliverable, I designed a climate app using Flask.
+                I used SQLAlchemy to extract the temperature data for our vacation dates to see when is the best time to visit. Also, if June and December have a meaniful difference between temperature.
               </p>
               <a
                 href="./project-3.html"
@@ -275,18 +274,16 @@
           <div class="projects__row">
               <div class="projects__row-img-cont">
                 <img
-                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  src="./assets/png/sql_image.png"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
                 />
               </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 4</h3>
+              <h3 class="projects__row-content-title">Project 4: PostgreSQL: Employee Database using Historical Data Analysis</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                A research project on Pewlett Hackard employees from the 1980s and 1990s using SQL: data modeling, data engineering, and data anlysis. The challenge utlizized data modeling, engineering, and analysis to build a SQL database with six tables. Using employee data from historical csv files, the database and tables were sucessfully imported.
               </p>
               <a
                 href="./project-4.html"
@@ -299,18 +296,16 @@
           <div class="projects__row">
               <div class="projects__row-img-cont">
                 <img
-                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  src="./assets/png/python-api-image.png"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
                 />
               </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 5</h3>
+              <h3 class="projects__row-content-title">Project 5: Python-API</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Using Python requests, APIs, and JSON, we are set off to answer "what's the weather like near the equator?". I know you maybe thinking that it's "hot" of course. But, can you prove it?
               </p>
               <a
                 href="./project-5.html"
@@ -323,18 +318,17 @@
           <div class="projects__row">
               <div class="projects__row-img-cont">
                 <img
-                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  src="./assets/png/matplotlib-image.png"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
                 />
               </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 6</h3>
+              <h3 class="projects__row-content-title">Project 6: Matplotlib: Pharmaceutical Tumor Drug Study</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Matplotlib applied to real-world situations help to showcase the importance of data analysis. At a Pharmaceutical company, based in San Diego, you have been given access to the complete data from their more recent animal study.
+                The study aimed to compare the performance of Pymaceuticals' drug of interest, Capomulin, versus th other drug treatment regimens. Executives have tasked you to generate all of the tables and figures needed for the technical report of the study. They requested a top-level summary of the study results. 
               </p>
               <a
                 href="./project-6.html"
@@ -347,18 +341,17 @@
           <div class="projects__row">
               <div class="projects__row-img-cont">
                 <img
-                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  src="./assets/png/pandas-image.png"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
                 />
               </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 7</h3>
+              <h3 class="projects__row-content-title">Project 7: Pandas: Education Standardized Tests Analysis</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Pandas can help with making strategic decisions regarding future school budgets and priorities for the school board and mayor.
+                Analyzed district-wide standardized test results for math and reading. Showcased a few trends in school performance and provide a few results.
               </p>
               <a
                 href="./project-7.html"
@@ -371,18 +364,16 @@
           <div class="projects__row">
               <div class="projects__row-img-cont">
                 <img
-                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  src="./assets/png/python-pybank.png"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
                 />
               </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 8</h3>
+              <h3 class="projects__row-content-title">Project 8: Python: PyBank and PyPoll Analysis</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                The Python project's output are two scripts that analyzed financial records of a company, PyBank, and modernize a small, rural town vote counting process, PyPoll.
               </p>
               <a
                 href="./project-8.html"
