--- a/project-3.html
+++ b/project-3.html
@@ -87,9 +87,7 @@
         <h1 class="heading-primary">Project 3</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+            SQLAlchemy used to extract temperature data vacation dates to see when is the best time to visit. Also, if June and December have a meaniful difference between temperature.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -111,20 +109,10 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Neque alias tenetur minus quaerat
-                aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-                eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-                ullam rem?
+                Planning a vacation to Hawaii! I used SQLAlchemy to extract the temperature data for our vacation dates to see when is the best time to visit. Also, if June and December have a meaniful difference between temperature. Used a paired t-test to determin whether the difference in the mean is statistically significant. I used tools such as Python, SQLAlchemy, Pandas, Matplotlib, JSON and Flask API. In addition to the analysis deliverable, I designed a climate app using Flask.
               </p>
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem?
+                Used a paired t-test to determin whether the difference in the mean is statistically significant. I used tools such as Python, SQLAlchemy, Pandas, Matplotlib, JSON and Flask API. In addition to the analysis deliverable, I designed a climate app using Flask.
               </p>
             </div>
             <div class="project-details__tools-used">
