--- a/project-1.html
+++ b/project-1.html
@@ -100,7 +100,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/vba_project_img.png"
+              src="./assets/png/vba-image.png"
               alt="VBA Project Image"
               class="project-details__showcase-img"
             />
