--- a/project-2.html
+++ b/project-2.html
@@ -87,9 +87,7 @@
         <h1 class="heading-primary">Project 2</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+            Web Design: Weather Data Visualization is a website design that utilized HTML, CSS, Bootstrap, Python, and Pandas to showcase weather data from an API output csv. The Web Visualization Dashboard consists of individual pages for each plot and a way to navigate between them. The pages contain the landing page, viusalizations, comparison of all plots, and data table used to build plots.
           </p>
         </div>
         <div class="project-cs-hero__cta">
