--- a/project-1.html
+++ b/project-1.html
@@ -121,6 +121,7 @@
                 <div class="skills__skill">Microsoft Excel</div>
                 <div class="skills__skill">Microsoft Excel VBA</div>
                 <div class="skills__skill">Macros</div>
+                <div class="skills__skill">Github</div>
                 <div class="skills__skill">GIT</div>
               </div>
             </div>
