project 4 html completed

--- a/project-1.html
+++ b/project-1.html
@@ -181,7 +181,7 @@
               CONTACT INFORMATION
               <ul>
                 <li>PH: (478) 390-9153</li>
-                <li>EMAIL: STRICKLAND.TANISHA@YAHOO.COM</li>
+                <li>EMAIL: <a href="mailto:STRICKLAND.TANISHA@YAHOO.COM">STRICKLAND.TANISHA@YAHOO.COM</a></li>
               </ul>
             </p>
           </div>
