project 7 html completed

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is Tanisha Cooper</h1>
+        <h1 class="heading-primary">Hi, My name is Tanisha Cooper</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             Self-driven, quick starter, passionate data analyst and Registered Nurse (MSN) with a curious mind who loves solving a very complex, challenging real-world problems using machine learning tools to create data visualizations.
