index.html updated

--- a/index.html
+++ b/index.html
@@ -382,6 +382,28 @@
                 >Case Study</a
               >
             </div>
+            <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/comparison-lg.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Project 9: Web Scraping: Missions to Mars</h3>
+              <p class="projects__row-content-desc">
+                Build a web application that scrapes various websites for data related to the Mission to Mars and displays the information in a single HTML page. 
+              </p>
+              <a
+                href="./project-9-html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
           </div>
         </div>
       </div>
