project-9.html finished

--- a/index.html
+++ b/index.html
@@ -387,28 +387,18 @@
             <div class="projects__row-img-cont">
               <img
                 src="./assets/png/mediamodifier_image.png"
-                alt="Mission to Mars"
+                alt="Web Scraping"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
-            <div class="projects__row">
-              <div class="projects__row-img-cont">
-                <img
-                  src="./assets/png/mediamodifier_image.png"
-                  alt="Software Screenshot"
-                  class="projects__row-img"
-                  loading="lazy"
-                />
-              </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 7: Pandas: Education Standardized Tests Analysis</h3>
+              <h3 class="projects__row-content-title">Project 9: Web Scraping: Mission to Mars</h3>
               <p class="projects__row-content-desc">
-                Pandas can help with making strategic decisions regarding future school budgets and priorities for the school board and mayor.
-                Analyzed district-wide standardized test results for math and reading. Showcased a few trends in school performance and provide a few results.
+                The challenge was to build a web application that scrapes various websites for data related to the Missions to Mars and display the information in a single HTML page/template. 
               </p>
               <a
-                href="./project-7.html"
+                href="./project-9.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
